tests/sksl/errors/LayoutInFunctions.glsl
### Compilation failed:

error: 20: layout qualifier 'origin_upper_left' is not permitted here
error: 20: layout qualifier 'override_coverage' is not permitted here
error: 20: layout qualifier 'push_constant' is not permitted here
error: 20: layout qualifier 'blend_support_all_equations' is not permitted here
error: 20: layout qualifier 'tracked' is not permitted here
error: 20: layout qualifier 'srgb_unpremul' is not permitted here
error: 20: layout qualifier 'key' is not permitted here
error: 20: layout qualifier 'location' is not permitted here
error: 20: layout qualifier 'offset' is not permitted here
error: 20: layout qualifier 'binding' is not permitted here
error: 20: layout qualifier 'index' is not permitted here
error: 20: layout qualifier 'set' is not permitted here
error: 20: layout qualifier 'builtin' is not permitted here
error: 20: layout qualifier 'input_attachment_index' is not permitted here
error: 20: layout qualifier 'max_vertices' is not permitted here
error: 20: layout qualifier 'invocations' is not permitted here
error: 20: layout qualifier 'when' is not permitted here
error: 20: layout qualifier 'ctype' is not permitted here
error: 41: layout qualifier 'origin_upper_left' is not permitted here
error: 41: layout qualifier 'override_coverage' is not permitted here
error: 41: layout qualifier 'push_constant' is not permitted here
error: 41: layout qualifier 'blend_support_all_equations' is not permitted here
error: 41: layout qualifier 'tracked' is not permitted here
error: 41: layout qualifier 'srgb_unpremul' is not permitted here
error: 41: layout qualifier 'key' is not permitted here
error: 41: layout qualifier 'location' is not permitted here
error: 41: layout qualifier 'offset' is not permitted here
error: 41: layout qualifier 'binding' is not permitted here
error: 41: layout qualifier 'index' is not permitted here
error: 41: layout qualifier 'set' is not permitted here
error: 41: layout qualifier 'builtin' is not permitted here
error: 41: layout qualifier 'input_attachment_index' is not permitted here
error: 41: layout qualifier 'max_vertices' is not permitted here
error: 41: layout qualifier 'invocations' is not permitted here
error: 41: layout qualifier 'when' is not permitted here
error: 41: layout qualifier 'ctype' is not permitted here
36 errors
